pre final commit 00

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             background-color: #F99A40;
             transform: scale(1.2);
         }
-    
+
     </style>
 
 </head>
@@ -437,64 +437,64 @@
     </div>
 
     <!---testinomials-->
-    <section class="py-20">
-        <div class="max-w-7xl mx-auto px-8">
-            <div class="text-center mb-16">
-                <h2 class="text-4xl font-bold mb-4">What Our Clients Say</h2>
-                <p class="text-gray-600 max-w-2xl mx-auto">Read testimonials from our satisfied clients</p>
-            </div>
-            <div class="grid md:grid-cols-3 gap-8">
-                <div class="bg-white p-8 rounded-lg shadow-sm">
-                    <div class="text-custom mb-4">
-                        <i class="fas fa-quote-left text-3xl"></i>
-                    </div>
-                    <p class="text-gray-600 mb-6">&#34;Evodesigns and exceeded our expectations with their
-                        professionalism
-                        and attention to detail. They delivered our project on time and within budget.&#34;</p>
-                    <div class="flex items-center">
-                        <img src="assets/IMG 9.webp" alt="Client 1" class="w-12 h-12 rounded-full" />
-                        <div class="ml-4">
-                            <div class="font-semibold">John Anderson</div>
-                            <div class="text-sm text-gray-500">CEO, Tech Solutions Inc.</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="bg-white p-8 rounded-lg shadow-sm">
-                    <div class="text-custom mb-4">
-                        <i class="fas fa-quote-left text-3xl"></i>
-                    </div>
-                    <p class="text-gray-600 mb-6">&#34;Working with Evodesigns and was a pleasure. Their team&#39;s
-                        expertise
-                        and commitment to quality were evident throughout the project.&#34;</p>
-                    <div class="flex items-center">
-                        <img src="assets/IMG 10.webp" alt="Client 2" class="w-12 h-12 rounded-full" />
-                        <div class="ml-4">
-                            <div class="font-semibold">Sarah Thompson</div>
-                            <div class="text-sm text-gray-500">Director, Real Estate Development</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="bg-white p-8 rounded-lg shadow-sm">
-                    <div class="text-custom mb-4">
-                        <i class="fas fa-quote-left text-3xl"></i>
-                    </div>
-                    <p class="text-gray-600 mb-6">&#34;The team at Evodesigns and demonstrated exceptional
-                        problem-solving
-                        skills and maintained clear communication throughout our project.&#34;</p>
-                    <div class="flex items-center">
-                        <img src="assets/IMG 11.webp" alt="Client 3" class="w-12 h-12 rounded-full" />
-                        <div class="ml-4">
-                            <div class="font-semibold">Michael Roberts</div>
-                            <div class="text-sm text-gray-500">Property Developer</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+<!--    <section class="py-20">-->
+<!--        <div class="max-w-7xl mx-auto px-8">-->
+<!--            <div class="text-center mb-16">-->
+<!--                <h2 class="text-4xl font-bold mb-4">What Our Clients Say</h2>-->
+<!--                <p class="text-gray-600 max-w-2xl mx-auto">Read testimonials from our satisfied clients</p>-->
+<!--            </div>-->
+<!--            <div class="grid md:grid-cols-3 gap-8">-->
+<!--                <div class="bg-white p-8 rounded-lg shadow-sm">-->
+<!--                    <div class="text-custom mb-4">-->
+<!--                        <i class="fas fa-quote-left text-3xl"></i>-->
+<!--                    </div>-->
+<!--                    <p class="text-gray-600 mb-6">&#34;Evodesigns and exceeded our expectations with their-->
+<!--                        professionalism-->
+<!--                        and attention to detail. They delivered our project on time and within budget.&#34;</p>-->
+<!--                    <div class="flex items-center">-->
+<!--                        <img src="assets/IMG 9.webp" alt="Client 1" class="w-12 h-12 rounded-full" />-->
+<!--                        <div class="ml-4">-->
+<!--                            <div class="font-semibold">John Anderson</div>-->
+<!--                            <div class="text-sm text-gray-500">CEO, Tech Solutions Inc.</div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="bg-white p-8 rounded-lg shadow-sm">-->
+<!--                    <div class="text-custom mb-4">-->
+<!--                        <i class="fas fa-quote-left text-3xl"></i>-->
+<!--                    </div>-->
+<!--                    <p class="text-gray-600 mb-6">&#34;Working with Evodesigns and was a pleasure. Their team&#39;s-->
+<!--                        expertise-->
+<!--                        and commitment to quality were evident throughout the project.&#34;</p>-->
+<!--                    <div class="flex items-center">-->
+<!--                        <img src="assets/IMG 10.webp" alt="Client 2" class="w-12 h-12 rounded-full" />-->
+<!--                        <div class="ml-4">-->
+<!--                            <div class="font-semibold">Sarah Thompson</div>-->
+<!--                            <div class="text-sm text-gray-500">Director, Real Estate Development</div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="bg-white p-8 rounded-lg shadow-sm">-->
+<!--                    <div class="text-custom mb-4">-->
+<!--                        <i class="fas fa-quote-left text-3xl"></i>-->
+<!--                    </div>-->
+<!--                    <p class="text-gray-600 mb-6">&#34;The team at Evodesigns and demonstrated exceptional-->
+<!--                        problem-solving-->
+<!--                        skills and maintained clear communication throughout our project.&#34;</p>-->
+<!--                    <div class="flex items-center">-->
+<!--                        <img src="assets/IMG 11.webp" alt="Client 3" class="w-12 h-12 rounded-full" />-->
+<!--                        <div class="ml-4">-->
+<!--                            <div class="font-semibold">Michael Roberts</div>-->
+<!--                            <div class="text-sm text-gray-500">Property Developer</div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </section>-->
     <!---contact-->
     <section class="py-20">
-        <div class="max-w-7xl mx-auto px-8">
+        <div class="max-w-[95%] md:max-w-7xl mx-auto px-4 md:px-8">
             <div class="grid md:grid-cols-2 gap-16">
                 <div>
                     <h2 class="text-4xl font-bold mb-8">Contact Us</h2>
@@ -502,28 +502,28 @@
                         <div>
                             <label class="block text-sm font-medium text-gray-700 mb-2">Name</label>
                             <input type="text"
-                                class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-custom focus:border-custom"
-                                placeholder="Your name" />
+                                   class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-custom focus:border-custom"
+                                   placeholder="Your name" />
                         </div>
                         <div>
                             <label class="block text-sm font-medium text-gray-700 mb-2">Email</label>
                             <input type="email"
-                                class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-custom focus:border-custom"
-                                placeholder="Your email" />
+                                   class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-custom focus:border-custom"
+                                   placeholder="Your email" />
                         </div>
                         <div>
                             <label class="block text-sm font-medium text-gray-700 mb-2">Message</label>
                             <textarea
-                                class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-custom focus:border-custom h-32"
-                                placeholder="Your message"></textarea>
+                                    class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-custom focus:border-custom h-32"
+                                    placeholder="Your message"></textarea>
                         </div>
                         <button type="submit"
-                            class="bg-[#F99A40] text-gray-900 px-6 py-3 !rounded-button hover:bg-[#F99A40]/90 w-full font-medium">Send
+                                class="bg-[#F99A40] text-gray-900 px-6 py-3 !rounded-button hover:bg-[#F99A40]/90 w-full font-medium">Send
                             Message</button>
                     </form>
                 </div>
                 <div>
-                    <div class="bg-gray-100 p-8 rounded-lg">
+                    <div class="bg-gray-100 p-6 md:p-8 rounded-lg">
                         <h3 class="text-2xl font-semibold mb-6">Our Office</h3>
                         <div class="space-y-4">
                             <div class="flex items-start">
@@ -548,23 +548,23 @@
                                 </div>
                             </div>
                         </div>
-                        <div  class="mt-8" style="max-width: 100%; overflow: hidden; text-align: center;">
-                            <iframe 
-                                src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3902.5668944512836!2d75.68844207506042!3d12.004441988229082!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTLCsDAwJzE2LjAiTiA3NcKwNDEnMjcuNyJF!5e0!3m2!1sen!2sin!4v1736947809276!5m2!1sen!2sin" 
-                                width="600" 
-                                height="250" 
-                                style="border: 0;" 
-                                allowfullscreen="" 
-                                loading="lazy" 
-                                referrerpolicy="no-referrer-when-downgrade">
+                        <div class="mt-8" style="max-width: 100%; overflow: hidden; text-align: center;">
+                            <iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3902.5668944512836!2d75.68844207506042!3d12.004441988229082!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTLCsDAwJzE2LjAiTiA3NcKwNDEnMjcuNyJF!5e0!3m2!1sen!2sin!4v1736947809276!5m2!1sen!2sin"
+                                    width="100%"
+                                    height="250"
+                                    style="border: 0;"
+                                    allowfullscreen=""
+                                    loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade">
                             </iframe>
                         </div>
-                
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
     <!---footer--->
 
     <footer class="bg-gray-900 text-white py-16">
