--- a/about-us.html
+++ b/about-us.html
@@ -144,7 +144,7 @@
                             alt="Chairman"
                             class="w-48 h-48 rounded-full mx-auto mb-6 object-cover shadow-lg"
                     />
-                    <h3 class="text-2xl font-semibold mb-2">Mr. Benny</h3>
+                    <h3 class="text-2xl font-semibold mb-2">Mr. Benny Joseph</h3>
                     <p class="text-gray-500 text-lg">Chairman</p>
                     <p class="text-gray-600 mt-4">
                         With over 30 years of experience, Mr. Benny has been instrumental in driving the vision and success
