--- a/services.html
+++ b/services.html
@@ -287,7 +287,7 @@
             </div>
         </div>
     </section>
-    <section class="py-20">
+    <!--<section class="py-20">
         <div class="max-w-7xl mx-auto px-8">
             <div class="text-center mb-16">
                 <h2 class="text-4xl font-bold mb-4">What Our Clients Say</h2>
@@ -344,7 +344,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
        <!---footer--->
 
        <footer class="bg-gray-900 text-white py-16">
