pre final commit 01

--- a/services.html
+++ b/services.html
@@ -369,10 +369,12 @@
                     <h4 class="text-lg font-semibold mb-6">Connect With Us</h4>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-facebook"></i></a>
-                        <a href="https://www.instagram.com/evo_design_constructions?igsh=MWJxaWFjN2hiZnl6MA%3D%3D&utm_source=qr"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.instagram.com/evo_design_constructions/?igsh=MWJxaWFjN2hiZnl6MA%3D%3D&utm_source=qr" class="text-gray-400 hover:text-white text-xl"><i
+                                class="fab fa-instagram"></i></a>
                         <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-twitter"></i></a>
                         <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-linkedin"></i></a>
-                        <a href="https://www.youtube.com/channel/UCwirZZJa0apc1ZB8ugioTng" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.youtube.com/channel/UCwirZZJa0apc1ZB8ugioTng"
+                            class="text-gray-400 hover:text-white text-xl"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
                 <div>
@@ -391,9 +393,17 @@
 
             </div>
             <div class="border-t border-gray-800 pt-8 text-center text-gray-400">
-                <p>© 2025 Evodesigns and Construction. All rights reserved.</p>
+                <div>
+                    <p>© 2025 Evodesign and Constructions. All rights reserved.</p>
+                </div>
+                <div class="flex flex-wrap justify-center items-center gap-2 mt-2">
+                    Developed By &nbsp;
+                    <a href="https://www.unistacx.com/" target="_blank" rel="noopener noreferrer"
+                        class="inline-flex items-center justify-center gap-2 font-bold bg-white p-1 rounded">
+                        <img src="./assets/img/unistacx_logo.svg" alt="Unistacx Logo" class="h-auto w-[5em]" />
+                    </a>
+                </div>
             </div>
-        </div>
     </footer>
 
 </body>
