overflow-x correction done

--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
 
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <style>
-        html,
-        body {
-            height: 100%;
+     
+        html, body {
+            overflow-x: hidden; /* Prevent horizontal scrolling */
             margin: 0;
+            padding: 0;
         }
+
 
         .swiper-container {
             overflow: hidden;
@@ -50,6 +52,10 @@
             background-color: #F99A40;
             transform: scale(1.2);
         }
+
+
+
+
     </style>
 
 </head>
