--- a/about-us.html
+++ b/about-us.html
@@ -13,6 +13,14 @@
         src="https://cdn.tailwindcss.com/3.4.5?plugins=forms@0.5.7,typography@0.5.13,aspect-ratio@0.4.2,container-queries@0.1.1"></script>
     <script src="https://ai-public.creatie.ai/gen_page/tailwind-config.min.js" data-color="#F99A40"
         data-border-radius="small"></script>
+        <style>
+               html, body {
+            overflow-x: hidden; /* Prevent horizontal scrolling */
+            margin: 0;
+            padding: 0;
+        }
+
+        </style>
 </head>
 
 <body class="font-[Poppins] bg-gray-50">
