--- a/projects.html
+++ b/projects.html
@@ -9,10 +9,18 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
     <link href="https://ai-public.creatie.ai/gen_page/tailwind-custom.css" rel="stylesheet" />
     <script
-            src="https://cdn.tailwindcss.com/3.4.5?plugins=forms@0.5.7,typography@0.5.13,aspect-ratio@0.4.2,container-queries@0.1.1"></script>
+        src="https://cdn.tailwindcss.com/3.4.5?plugins=forms@0.5.7,typography@0.5.13,aspect-ratio@0.4.2,container-queries@0.1.1"></script>
     <script src="https://ai-public.creatie.ai/gen_page/tailwind-config.min.js" data-color="#F99A40"
-            data-border-radius="small"></script>
+        data-border-radius="small"></script>
     <style>
+        html,
+        body {
+            overflow-x: hidden;
+            /* Prevent horizontal scrolling */
+            margin: 0;
+            padding: 0;
+        }
+
         .project-item {
             transition: all 0.3s ease;
         }
@@ -70,25 +78,27 @@
 <body class="font-[Poppins] bg-gray-50">
     <!--navbar-->
     <div id="loader-container"></div>
-    <nav id="navbar" class="bg-black sticky top-0 w-full z-50 shadow-sm transition-colors duration-300 borderborder-b border-white">
+    <nav id="navbar"
+        class="bg-black sticky top-0 w-full z-50 shadow-sm transition-colors duration-300 borderborder-b border-white">
         <div class="max-w-7xl mx-auto px-8">
             <div class="flex justify-between items-center h-auto py-2">
                 <!-- Logo -->
                 <div class="flex items-center">
                     <a href="index.html">
-                        <img src="log1.svg" alt="BuildTech Logo"
-                             class="h-16 md:h-24" />
+                        <img src="log1.svg" alt="BuildTech Logo" class="h-16 md:h-24" />
                     </a>
                 </div>
                 <!-- Desktop Menu -->
                 <div class="hidden md:flex items-center space-x-8">
                     <a href="index.html" class="text-white hover:text-[#F99A40]">Home</a>
                     <a href="about-us.html" class="text-white hover:text-[#F99A40]">About Us</a>
-                    <a href="projects.html" class="text-[#F99A40] border-b border-[#F99A40] hover:text-[#F99A40] font-medium">Projects</a>
+                    <a href="projects.html"
+                        class="text-[#F99A40] border-b border-[#F99A40] hover:text-[#F99A40] font-medium">Projects</a>
                     <a href="services.html" class="text-white hover:text-[#F99A40]">Services</a>
                     <!-- <a href="contact.html" class="text-white hover:text-[#F99A40]">Contact</a> -->
                     <a href="contact.html">
-                        <button class="border border-[#F99A40] text-white border-2 text-black px-6 py-2 rounded-md hover:bg-[#F99A40]/90 font-medium">
+                        <button
+                            class="border border-[#F99A40] text-white border-2 text-black px-6 py-2 rounded-md hover:bg-[#F99A40]/90 font-medium">
                             Contact Us
                         </button>
                     </a>
@@ -106,7 +116,7 @@
         </div>
         <!-- Mobile Menu -->
         <div id="mobile-menu"
-             class="fixed top-0 right-0 h-full w-64 bg-black shadow-lg transform translate-x-full transition-transform duration-300">
+            class="fixed top-0 right-0 h-full w-64 bg-black shadow-lg transform translate-x-full transition-transform duration-300">
             <div class="flex justify-between items-center px-4 py-4">
                 <span class="font-semibold text-lg text-white"></span>
                 <button id="mobile-menu-close" class="p-2">
@@ -126,7 +136,7 @@
     <!--header-->
     <header>
         <div class="relative h-[400px]"><img src="assets/s-1.jpg" alt="About Us Hero"
-                                             class="w-full h-full object-cover" />
+                class="w-full h-full object-cover" />
             <div class="absolute inset-0 bg-black/50">
                 <div class="max-w-7xl mx-auto px-8 h-full flex items-center">
                     <div class="max-w-2xl text-white">
@@ -147,24 +157,24 @@
                     <p class="text-gray-600 max-w-2xl mx-auto">Explore our latest construction projects through our
                         visual gallery</p>
                     <div class="flex justify-center gap-4 mt-4">
-                        <button class="px-4 py-2 rounded-lg bg-gray-200 hover:bg-custom hover:text-white filter-btn active"
+                        <button
+                            class="px-4 py-2 rounded-lg bg-gray-200 hover:bg-custom hover:text-white filter-btn active"
                             data-filter="all">All</button>
                         <button class="px-4 py-2 rounded-lg bg-gray-200 hover:bg-custom hover:text-white filter-btn"
                             data-filter="interior">Interior</button>
                         <button class="px-4 py-2 rounded-lg bg-gray-200 hover:bg-custom hover:text-white filter-btn"
                             data-filter="Exterior">Exterior</button>
-                            <!-- <button
+                        <!-- <button
                             class="px-4 py-2 rounded-lg bg-gray-200 hover:bg-custom hover:text-white filter-btn"
                             data-filter="industrial">Industrial</button> -->
-                            <!-- <button
+                        <!-- <button
                             class="px-4 py-2 rounded-lg bg-gray-200 hover:bg-custom hover:text-white filter-btn"
                             data-filter="sustainable">Sustainable</button> -->
                     </div>
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 project-gallery">
                     <div class="group relative overflow-hidden rounded-lg project-item interior">
-                        <img
-                            src="assets/starirs.jpg" alt="Construction Project 1"
+                        <img src="assets/starirs.jpg" alt="Construction Project 1"
                             class="w-full h-[300px] object-cover transition-transform duration-500 group-hover:scale-110" />
                         <div
                             class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300">
@@ -483,66 +493,66 @@
         <img src="" alt="Fullscreen Project" />
         <button class="nav-btn next-btn">&#8250;</button>
     </div>
-   <!---footer--->
+    <!---footer--->
 
-   <footer class="bg-gray-900 text-white py-16">
-    <div class="max-w-7xl mx-auto px-8">
-        <div class="grid md:grid-cols-4 gap-12 mb-16">
-            <div>
-                <img src="logos.svg" alt="Evodesigns and Logo" class="h-32 mb-6" />
-                <p class="text-gray-400">Building excellence through innovation and dedication to quality
-                    construction.</p>
+    <footer class="bg-gray-900 text-white py-16">
+        <div class="max-w-7xl mx-auto px-8">
+            <div class="grid md:grid-cols-4 gap-12 mb-16">
+                <div>
+                    <img src="logos.svg" alt="Evodesigns and Logo" class="h-32 mb-6" />
+                    <p class="text-gray-400">Building excellence through innovation and dedication to quality
+                        construction.</p>
+                </div>
+                <div>
+                    <h4 class="text-lg font-semibold mb-6">Quick Links</h4>
+                    <ul class="space-y-4">
+                        <li><a href="index.html" class="text-gray-400 hover:text-white">Home</a></li>
+                        <li><a href="about-us.html" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="services.html" class="text-gray-400 hover:text-white">Services</a></li>
+                        <li><a href="projects.html" class="text-gray-400 hover:text-white">Projects</a></li>
+                        <li><a href="contact.html" class="text-gray-400 hover:text-white">Contact</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h4 class="text-lg font-semibold mb-6">Connect With Us</h4>
+                    <div class="flex space-x-4">
+                        <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/evo_design_constructions/?igsh=MWJxaWFjN2hiZnl6MA%3D%3D&utm_source=qr"
+                            class="text-gray-400 hover:text-white text-xl"><i class="fab fa-instagram"></i></a>
+                        <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-twitter"></i></a>
+                        <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.youtube.com/channel/UCwirZZJa0apc1ZB8ugioTng"
+                            class="text-gray-400 hover:text-white text-xl"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+                <div>
+                    <h4 class="text-lg font-semibold mb-6">Contact Us</h4>
+                    <p class="text-gray-400 mb-4">Send us your email, and we'll get back to you.</p>
+                    <form class="flex w-full">
+                        <input type="email" placeholder="Your email"
+                            class="flex-1 px-4 py-2 rounded-l-md focus:outline-none focus:ring-2 focus:ring-custom w-full"
+                            required />
+                        <button type="submit"
+                            class="bg-[#F99A40] text-gray-900 px-4 py-1 rounded-r-md hover:bg-[#F99A40]/90 font-medium text-sm">
+                            Send
+                        </button>
+                    </form>
+                </div>
+
             </div>
-            <div>
-                <h4 class="text-lg font-semibold mb-6">Quick Links</h4>
-                <ul class="space-y-4">
-                    <li><a href="index.html" class="text-gray-400 hover:text-white">Home</a></li>
-                    <li><a href="about-us.html" class="text-gray-400 hover:text-white">About Us</a></li>
-                    <li><a href="services.html" class="text-gray-400 hover:text-white">Services</a></li>
-                    <li><a href="projects.html" class="text-gray-400 hover:text-white">Projects</a></li>
-                    <li><a href="contact.html" class="text-gray-400 hover:text-white">Contact</a></li>
-                </ul>
-            </div>
-            <div>
-                <h4 class="text-lg font-semibold mb-6">Connect With Us</h4>
-                <div class="flex space-x-4">
-                    <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-facebook"></i></a>
-                    <a href="https://www.instagram.com/evo_design_constructions/?igsh=MWJxaWFjN2hiZnl6MA%3D%3D&utm_source=qr" class="text-gray-400 hover:text-white text-xl"><i
-                            class="fab fa-instagram"></i></a>
-                    <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://www.youtube.com/channel/UCwirZZJa0apc1ZB8ugioTng"
-                        class="text-gray-400 hover:text-white text-xl"><i class="fab fa-youtube"></i></a>
+            <div class="border-t border-gray-800 pt-8 text-center text-gray-400">
+                <div>
+                    <p>© 2025 Evodesign and Constructions. All rights reserved.</p>
+                </div>
+                <div class="flex flex-wrap justify-center items-center gap-2 mt-2">
+                    Developed By &nbsp;
+                    <a href="https://www.unistacx.com/" target="_blank" rel="noopener noreferrer"
+                        class="inline-flex items-center justify-center gap-2 font-bold bg-white p-1 rounded">
+                        <img src="./assets/img/unistacx_logo.svg" alt="Unistacx Logo" class="h-auto w-[5em]" />
+                    </a>
                 </div>
             </div>
-            <div>
-                <h4 class="text-lg font-semibold mb-6">Contact Us</h4>
-                <p class="text-gray-400 mb-4">Send us your email, and we'll get back to you.</p>
-                <form class="flex w-full">
-                    <input type="email" placeholder="Your email"
-                        class="flex-1 px-4 py-2 rounded-l-md focus:outline-none focus:ring-2 focus:ring-custom w-full"
-                        required />
-                    <button type="submit"
-                        class="bg-[#F99A40] text-gray-900 px-4 py-1 rounded-r-md hover:bg-[#F99A40]/90 font-medium text-sm">
-                        Send
-                    </button>
-                </form>
-            </div>
-
-        </div>
-        <div class="border-t border-gray-800 pt-8 text-center text-gray-400">
-            <div>
-                <p>© 2025 Evodesign and Constructions. All rights reserved.</p>
-            </div>
-            <div class="flex flex-wrap justify-center items-center gap-2 mt-2">
-                Developed By &nbsp;
-                <a href="https://www.unistacx.com/" target="_blank" rel="noopener noreferrer"
-                    class="inline-flex items-center justify-center gap-2 font-bold bg-white p-1 rounded">
-                    <img src="./assets/img/unistacx_logo.svg" alt="Unistacx Logo" class="h-auto w-[5em]" />
-                </a>
-            </div>
-        </div>
-</footer>
+    </footer>
 
 
 
@@ -586,4 +596,5 @@
     });
 </script>-->
 <script type="module" src="main.js"></script>
+
 </html>
