images-comp and some changes done

--- a/about-us.html
+++ b/about-us.html
@@ -14,7 +14,7 @@
     <script src="https://ai-public.creatie.ai/gen_page/tailwind-config.min.js" data-color="#F99A40"
         data-border-radius="small"></script>
         <style>
-               html, body {
+        body {
             overflow-x: hidden; /* Prevent horizontal scrolling */
             margin: 0;
             padding: 0;
