--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <style>
      
-        html, body {
+     body {
             overflow-x: hidden; /* Prevent horizontal scrolling */
             margin: 0;
             padding: 0;
+            height: 100%;
         }
-
-
         .swiper-container {
             overflow: hidden;
             /* Prevents scrollbar flash */
@@ -52,9 +51,6 @@
             background-color: #F99A40;
             transform: scale(1.2);
         }
-
-
-
 
     </style>
 
@@ -184,10 +180,9 @@
                     <div class="absolute inset-0 bg-black/50">
                         <div class="max-w-7xl mx-auto px-8 h-full flex items-center">
                             <div class="max-w-2xl text-white">
-                                <h1 class="text-5xl font-bold mb-6">Crafting Your Dreams with Precision</h1>
-                                <p class="text-xl mb-8">From planning to execution, we bring innovation and quality to
-                                    every
-                                    project.</p>
+                                <h1 class="text-5xl font-bold mb-6">Building a Legacy of Excellence</h1>
+                                <p class="text-xl mb-8">Combining expertise and innovation to deliver projects that stand the test of time, ensuring satisfaction every step of the way.</p>
+                                
                                 <a href="services.html">
                                     <button
                                         class="bg-[#F99A40] text-gray-900 px-8 py-3 rounded-lg hover:bg-[#F99A40]/90 font-medium transition-transform transform hover:scale-105">
