--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
     <script src="https://ai-public.creatie.ai/gen_page/tailwind-config.min.js" data-color="#F99A40"
         data-border-radius="small"></script>
     <style>
-        html,
+  
         body {
             overflow-x: hidden;
             /* Prevent horizontal scrolling */
@@ -78,27 +78,25 @@
 <body class="font-[Poppins] bg-gray-50">
     <!--navbar-->
     <div id="loader-container"></div>
-    <nav id="navbar"
-        class="bg-black sticky top-0 w-full z-50 shadow-sm transition-colors duration-300 borderborder-b border-white">
+    <nav id="navbar" class="bg-black sticky top-0 w-full z-50 shadow-sm transition-colors duration-300 borderborder-b border-white">
         <div class="max-w-7xl mx-auto px-8">
             <div class="flex justify-between items-center h-auto py-2">
                 <!-- Logo -->
                 <div class="flex items-center">
                     <a href="index.html">
-                        <img src="log1.svg" alt="BuildTech Logo" class="h-16 md:h-24" />
+                        <img src="log1.svg" alt="BuildTech Logo"
+                             class="h-16 md:h-24" />
                     </a>
                 </div>
                 <!-- Desktop Menu -->
                 <div class="hidden md:flex items-center space-x-8">
                     <a href="index.html" class="text-white hover:text-[#F99A40]">Home</a>
                     <a href="about-us.html" class="text-white hover:text-[#F99A40]">About Us</a>
-                    <a href="projects.html"
-                        class="text-[#F99A40] border-b border-[#F99A40] hover:text-[#F99A40] font-medium">Projects</a>
+                    <a href="projects.html" class="text-[#F99A40] border-b border-[#F99A40] hover:text-[#F99A40] font-medium">Projects</a>
                     <a href="services.html" class="text-white hover:text-[#F99A40]">Services</a>
                     <!-- <a href="contact.html" class="text-white hover:text-[#F99A40]">Contact</a> -->
                     <a href="contact.html">
-                        <button
-                            class="border border-[#F99A40] text-white border-2 text-black px-6 py-2 rounded-md hover:bg-[#F99A40]/90 font-medium">
+                        <button class="border border-[#F99A40] text-white border-2 text-black px-6 py-2 rounded-md hover:bg-[#F99A40]/90 font-medium">
                             Contact Us
                         </button>
                     </a>
@@ -116,7 +114,7 @@
         </div>
         <!-- Mobile Menu -->
         <div id="mobile-menu"
-            class="fixed top-0 right-0 h-full w-64 bg-black shadow-lg transform translate-x-full transition-transform duration-300">
+             class="fixed top-0 right-0 h-full w-64 bg-black shadow-lg transform translate-x-full transition-transform duration-300">
             <div class="flex justify-between items-center px-4 py-4">
                 <span class="font-semibold text-lg text-white"></span>
                 <button id="mobile-menu-close" class="p-2">
