--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             });
         });
     </script>
-    <header class="h-full">
+    <header class="h-[100vh]">
         <div class="swiper-container relative h-full">
             <!-- Swiper Wrapper -->
             <div class="swiper-wrapper">
