pre final commit 02

--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
                 <div class="swiper-slide h-full">
                     <img src="assets/p-18.webp" alt="Construction Site" class="w-full h-full object-cover" />
                     <div class="absolute inset-0 bg-black/50">
-                        <div class="max-w-7xl mx-auto px-8 h-full flex items-center">
+                        <div class="max-w-7xl mx-auto p-10 md:px-8 h-full flex items-center">
                             <div class="max-w-2xl text-white">
-                                <h1 class="text-5xl font-bold mb-6">Redefining Excellence in Modern Construction</h1>
-                                <p class="text-xl mb-8">We transform ideas into architectural masterpieces, blending
+                                <h1 class="text-3xl md:text-5xl font-semibold mb-6">Redefining Excellence in Modern Construction</h1>
+                                <p class="text-xl font-thin	 mb-8">We transform ideas into architectural masterpieces, blending
                                     innovation, precision, and sustainability to create timeless designs.</p>
 
                                 <a href="projects.html">
@@ -157,10 +157,10 @@
                 <div class="swiper-slide h-full">
                     <img src="assets/p-13.webp" alt="Another Site" class="w-full h-full object-cover" />
                     <div class="absolute inset-0 bg-black/70">
-                        <div class="max-w-7xl mx-auto px-8 h-full flex items-center">
+                        <div class="max-w-7xl mx-auto px-10 md:px-8 h-full flex items-center">
                             <div class="max-w-2xl text-white">
-                                <h1 class="text-5xl font-bold mb-6">Crafting Your Dreams with Precision</h1>
-                                <p class="text-xl mb-8">From planning to execution, we bring innovation and quality to
+                                <h1 class="text-3xl md:text-5xl font-semibold mb-6">Crafting Your Dreams with Precision</h1>
+                                <p class="text-xl font-thin	 mb-8">From planning to execution, we bring innovation and quality to
                                     every
                                     project.</p>
                                 <a href="services.html">
@@ -176,12 +176,12 @@
 
 
                 <div class="swiper-slide h-full">
-                    <img src="assets/p-20.webp           " alt="Another Site" class="w-full h-full object-cover" />
+                    <img src="assets/p-20.webp" alt="Another Site" class="w-full h-full object-cover" />
                     <div class="absolute inset-0 bg-black/50">
-                        <div class="max-w-7xl mx-auto px-8 h-full flex items-center">
+                        <div class="max-w-7xl mx-auto px-10 md:px-8 h-full flex items-center">
                             <div class="max-w-2xl text-white">
-                                <h1 class="text-5xl font-bold mb-6">Building a Legacy of Excellence</h1>
-                                <p class="text-xl mb-8">Combining expertise and innovation to deliver projects that stand the test of time, ensuring satisfaction every step of the way.</p>
+                                <h1 class="text-3xl md:text-5xl font-semibold mb-6">Building a Legacy of Excellence</h1>
+                                <p class="text-xl font-thin	 mb-8">Combining expertise and innovation to deliver projects that stand the test of time, ensuring satisfaction every step of the way.</p>
                                 
                                 <a href="services.html">
                                     <button
